@@ -5,7 +5,12 @@ CFLAGS = -O0 -g
 override CFLAGS += -Wall -W -Werror -std=gnu99 -Wmissing-prototypes -Wwrite-strings -Wcast-qual -Wfloat-equal -Wshadow -Wpointer-arith -Wbad-function-cast -Wsign-compare -Wmissing-declarations -Wmissing-noreturn -Wmissing-format-attribute -Wredundant-decls -Wnested-externs -Winline -Wdisabled-optimization -Wno-long-long -Wstrict-prototypes -Wundef
 INCLUDES =
 
-SOURCES = src/main.c src/config.c src/daemon.c \
+LIBDAEMON_CFLAGS := $(shell pkg-config --cflags libcm4all-daemon)
+LIBDAEMON_LIBS := $(shell pkg-config --libs libcm4all-daemon)
+
+INCLUDES += $(LIBDAEMON_CFLAGS)
+
+SOURCES = src/main.c src/config.c \
 	src/syslog.c \
 	src/queue.c src/pg-queue.c \
 	src/plan.c src/plan-loader.c src/plan-library.c src/plan-update.c \
@@ -15,7 +20,7 @@ SOURCES = src/main.c src/config.c src/daemon.c \
 
 HEADERS = src/workshop.h src/syslog.h src/strarray.h src/strhash.h src/pg-util.h src/pg-queue.h
 OBJECTS = $(patsubst %.c,%.o,$(SOURCES))
-LIBS = -levent -lpq
+LIBS = -levent -lpq $(LIBDAEMON_LIBS)
 
 all: src/cm4all-workshop doc/workshop.html
 
