@@ -2,6 +2,7 @@ cm4all-workshop (0.1.5) unstable; urgency=low
 
   * fixed "SIGHUP" typo in init script
   * removed ellipsis from init script messages
+  * use libcm4all-daemon
 
  --
 
